完善文档信息，添加数据字典

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -22,5 +22,6 @@
       <div class="alert alert-primary">
         <h2>需要授权访问的接口需要在请求头中传递token</h2>
       </div>
+      <a href="/docs">接口文档</a>
   </body>
 </html>
